# emvpt

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  default.nix  emv_tags.json  emv_tags.yaml  log4rs.yaml  scheme_ca_public_keys.json  scheme_ca_public_keys.yaml  settings.json  settings.yaml  test_data.yaml
.github/workflows/: dockerimage.yml  snyk-analysis.yml  update-dependencies.yml
config/: emv_tags.yaml  scheme_ca_public_keys_production.yaml  settings.yaml
emvpt/: Cargo.toml  test_data.yaml
emvpt/src/: lib.rs
emvpt/src/bcdutil/: mod.rs
emvpt/src/config/: constants.yaml  emv_tags.yaml  scheme_ca_public_keys_production.yaml  scheme_ca_public_keys_test.yaml  settings.yaml
nix/: sources.json
src/: main.rs
terminalsimulator/: Cargo.toml
terminalsimulator/src/: main.rs
