[package]
name = "emvpt"
version = "0.1.0"
authors = ["Mika Rautio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcsc = "2.4.0"
iso7816-tlv = "0.4.1"
hexplay = "0.2.1"
asn1_der = "0.7.1"
hex = "0.4.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
log = "0.4.8"
log4rs = "0.12.0"
clap = "2.33.1"
rand_chacha = "0.2.2"
rand = "0.7.3"
# NOTE: mingw pre built binaries here: https://bintray.com/vszakats/generic/openssl
openssl-sys = "0.9.58"
openssl = "0.10.30"
chrono = "0.4.13"