[package]
name = "emvpt"
version = "0.1.0"
authors = ["Mika Rautio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
iso7816-tlv = "0.4.2"
hexplay = "0.2.1"
asn1_der = "0.7.5"
hex = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
log = "0.4.14"
log4rs = "1.0.0"
rand_chacha = "0.3.1"
rand = "0.8.4"
# NOTE: mingw pre built binaries here: https://bintray.com/vszakats/generic/openssl
openssl-sys = "0.9.67"
openssl = "0.10.36"
chrono = "0.4.19"
