[package]
name = "terminalsimulator"
version = "0.1.0"
authors = ["Mika Rautio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emvpt = { path = "../emvpt", version = "0.1.0" }
log = "0.4.17"
log4rs = "1.1.1"
clap = { version = "4.0.11", features = ["derive"] }
pcsc = "2.7.0"
regex = "1.6.0"
