[package]
name = "terminalsimulator"
version = "0.1.0"
authors = ["Mika Rautio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emvpt = { path = "../emvpt", version = "0.1.0" }
log = "0.4.20"
log4rs = "1.2.0"
clap = { version = "4.4.10", features = ["derive"] }
pcsc = "2.8.0"
regex = "1.10.2"
hex = "0.4.3"
rpassword = "7.3.1"
